--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -7,6 +7,10 @@
         <item name="colorPrimary">@color/colorBackground</item>
         <item name="colorPrimaryDark">@android:color/black</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:background">@color/colorBackground</item>
+        <item name="android:textColorPrimary">@color/colorBackground</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="ScreenTitleTextView" parent="TextAppearance.AppCompat">
@@ -14,5 +18,4 @@
         <item name="android:textSize">@dimen/title</item>
         <item name="android:textStyle">bold</item>
     </style>
-
 </resources>
